--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.security.user.password=12345
 spring.datasource.url=jdbc:h2:./notes
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+spring.security.oauth2.client.registration.google.client-id=815781859442-d60nle98j4djs0ge7agkvkt2740ubskj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
